--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>MODULE 2</title>
-        <link rel="stylesheet" href="css.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1> Topics</h1>
